[gd_scene load_steps=4 format=2]

[ext_resource path="res://BGMPlayer/Imagine Dragons, twocolors-01-Bones (twocolors Remix).mp3" type="AudioStream" id=1]
[ext_resource path="res://SoundManager.gd" type="Script" id=2]
[ext_resource path="res://jumpsound.wav" type="AudioStream" id=3]

[node name="SoundManager" type="Node2D"]
script = ExtResource( 2 )

[node name="Music" type="Node2D" parent="."]

[node name="TitleScreenBGM" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 1 )

[node name="GamePlayMusic" type="AudioStreamPlayer" parent="Music"]

[node name="EndingMusic" type="AudioStreamPlayer" parent="Music"]

[node name="SoundEffect" type="Node2D" parent="."]

[node name="jump" type="AudioStreamPlayer" parent="SoundEffect"]
stream = ExtResource( 3 )
